<resources>
    <string name="app_name">MiniApp1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_contacts">Contacts</string>
    <string name="saved_image_key">saved_avatar_image</string>
    <string name="pbd2021">PBD2021</string>
    <string name="app_title">Android Mini App 1</string>
    <string name="landing_image">Landing image</string>
    <string name="menu_message">Message</string>
    <string name="share">Share</string>
    <string name="group_email_button">Send group email</string>
    <string name="group_mms_button">Send group MMS</string>
    <string name="contact_read_permission_rationale">We need to access your contacts for this feature to work</string>
    <string name="contact_write_permission_rationale">"We need to contacts write permissions for this feature to work"</string>
    <string name="contact_permission_title">"Sorry to bother you"</string>
    <string name="floating_button_content_description">Add a new contact</string>
    <string name="hint_name">Name</string>
    <string name="hint_number">Number</string>
    <string name="hint_email">Email</string>
    <string name="button_add">Add</string>
</resources>