<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/shareTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:text="@string/share"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/emailBtn"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_height="@dimen/message_button_height"
        android:backgroundTint="@color/gray"
        android:text="@string/group_email_button"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shareTV" />

    <Button
        android:id="@+id/mmsBtn"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="0dp"
        android:layout_height="@dimen/message_button_height"
        android:backgroundTint="@color/gray"
        android:text="@string/group_mms_button"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>